kubernetes/apps/talos1018/adsb/app/adsbexchange-deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsbexchange
  namespace: adsb
  labels:
    app.kubernetes.io/name: adsbexchange
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: adsbexchange
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adsbexchange
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: adsbexchange
          image: ghcr.io/sdr-enthusiasts/docker-adsbexchange:20250210.1909
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "0.1"
              memory: "120Mi"
            requests:
              cpu: "0.05"
              memory: "60Mi"
