kubernetes/apps/talos1018/adsb/app/piaware-deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piaware
  namespace: adsb
  labels:
    app.kubernetes.io/name: piaware
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: piaware
  template:
    metadata:
      labels:
        app.kubernetes.io/name: piaware
    spec:
      containers:
        - name: piaware
          image: ghcr.io/sdr-enthusiasts/docker-piaware:v9.0.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              add: [SETUID, SETGID]
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
            - containerPort: 80
          resources:
            limits:
              cpu: "0.05"
              memory: "100Mi"
            requests:
              cpu: "0.01"
              memory: "50Mi"
