kubernetes/apps/talos1018/adsb/app/radarbox-deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarbox
  namespace: adsb
  labels:
    app.kubernetes.io/name: radarbox
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarbox
    spec:
      containers:
        - name: radarbox
          image: ghcr.io/sdr-enthusiasts/docker-radarbox:latest-build-715
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "0.02"
              memory: "50Mi"
            requests:
              cpu: "0.002"
              memory: "10Mi"
