kubernetes/apps/talos1018/adsb/app/readsb-deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readsb
  namespace: adsb
  labels:
    app.kubernetes.io/name: readsb
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: readsb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readsb
    spec:
      containers:
        - name: readsb
          image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:latest-build-845
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              add: [SETUID, SETGID]
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 30152
              name: net-api
          resources:
            limits:
              cpu: "0.3"
              memory: "250Mi"
            requests:
              cpu: "0.02"
              memory: "80Mi"
