kubernetes/apps/talos1018/adsb/app/planefinder-service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: planefinder
  namespace: adsb
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app.kubernetes.io/name: planefinder
  ports:
    - port: 30053
      targetPort: 30053
      protocol: TCP
      name: http
