kubernetes/apps/talos1018/adsb/app/redis-service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: adsb
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
