kubernetes/apps/talos1018/adsb/app/api-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: https://adsb.lol/favicon.ico
    gethomepage.dev/name: ADSB API
    gethomepage.dev/app: api
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "adsb-api.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 80
