kubernetes/apps/talos1018/adsb/app/flightradar24-ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flightradar24
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: https://www.flightradar24.com/static/favicons/favicon.svg
    gethomepage.dev/name: Flightradar24
    gethomepage.dev/app: flightradar24

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "fr24.adsb.${CLUSTER_DOMAIN}"
      secretName: flightradar24-tls
  rules:
    - host: fr24.adsb.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flightradar24
                port:
                  name: http
