kubernetes/apps/talos1018/adsb/app/piaware-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: piaware
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: https://www.flightaware.com/images/favicon-32x32.png
    gethomepage.dev/name: FlightAware
    gethomepage.dev/app: piaware
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "piaware.${CLUSTER_DOMAIN_LEGACY}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: piaware
          port: 8088
