kubernetes/apps/talos1018/adsb/app/piaware-ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-piaware
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: https://www.flightaware.com/images/favicon-32x32.png
    gethomepage.dev/name: FlightAware
    gethomepage.dev/app: piaware

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "piaware.adsb.${CLUSTER_DOMAIN}"
      secretName: piaware-tls
  rules:
    - host: piaware.adsb.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piaware
                port:
                  name: http
