kubernetes/apps/talos1018/adsb/app/planefinder-ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-planefinder
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: https://upload.wikimedia.org/wikipedia/commons/2/2e/Plane-finder.svg
    gethomepage.dev/name: planefinder
    gethomepage.dev/app: planefinder
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "planefinder.adsb.${CLUSTER_DOMAIN}"
      secretName: planefinder-tls
  rules:
    - host: planefinder.adsb.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planefinder
                port:
                  name: http
