kubernetes/apps/talos1018/adsb/app/readsb-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readsb
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: mdi-radar
    gethomepage.dev/name: readsb
    gethomepage.dev/app: readsb
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "readsb.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readsb
          port: 80
